Added encrypted Firebase credentials
Added extra factory methods for FirebaseDatabase

--- a/firebase/src/main/resources/reference.conf
+++ b/firebase/src/main/resources/reference.conf
@@ -1,5 +1,6 @@
 firebase {
   url = ${?FIREBASE_URL}
+  service_account_key_location = ${?FIREBASE_SERVICE_ACCOUNT_KEY_LOCATION}
   project_id = ${?FIREBASE_PROJECT_ID}
   private_key_id = ${?FIREBASE_PRIVATE_KEY_ID}
   private_key = ${?FIREBASE_PRIVATE_KEY}
