--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,7 @@ branches:
   - master
 before_install:
 - openssl aes-256-cbc -K $encrypted_7f5d77cd5a01_key -iv $encrypted_7f5d77cd5a01_iv
-  -in continuousIntegrationStorage.json.enc -out /tmp/google_cloud_credentials.json
-  -d
+  -in continuousIntegration.json.enc -out /tmp/google_cloud_credentials.json -d
 env:
   global:
   - FIREBASE_SERVICE_ACCOUNT_KEY_LOCATION=/tmp/google_cloud_credentials.json
